[gd_scene load_steps=2 format=3 uid="uid://origami_main"]

[ext_resource type="Script" path="res://scripts/game_controller.gd" id="1"]

[node name="Main" type="Control"]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Layout" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_left = 0.05
anchor_right = 0.95
anchor_top = 0.05
anchor_bottom = 0.95
offset_left = 0.0
offset_right = 0.0
offset_top = 0.0
offset_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Header" type="HBoxContainer" parent="Layout"]
size_flags_horizontal = 3
size_flags_vertical = 1
custom_minimum_size = Vector2(0, 40)

[node name="TurnLabel" type="Label" parent="Layout/Header"]
text = "Player 1 turn"
size_flags_horizontal = 3

[node name="CPLabel" type="Label" parent="Layout/Header"]
text = "CP: 5"
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="EndTurn" type="Button" parent="Layout/Header"]
text = "End Turn"
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="BoardWrapper" type="MarginContainer" parent="Layout"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Board" type="GridContainer" parent="Layout/BoardWrapper"]
columns = 9
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(720, 720)

[node name="LogLabel" type="Label" parent="Layout"]
text = "Welcome to Origami Tactics"
clip_text = true
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="ActionLog" type="RichTextLabel" parent="Layout"]
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_active = true
scroll_following = true
bbcode_enabled = true
text = ""
